[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/bg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Gunner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/GameWindow.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/EndScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/music_zapsplat_tuff_enough.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "end_scene"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("EndScene:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("EndScene:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="GameWindow" type="Node2D" groups=[
"Enemy",
"Gunner",
"Health",
]]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 320.088, 45.3831, 188.818, 320.24, 320.24 ],
"_edit_vertical_guides_": [ 38.8589, -50.2311, 761.379, 130.622, 621.508, 620.138, 400.081 ]
}

[node name="EndAnimation" type="AnimationPlayer" parent="."]
anims/end_scene = SubResource( 1 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 360.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gunner" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 40, 320 )
scale = Vector2( 0.2, 0.2 )
collision_mask = 6

[node name="Wall" parent="." instance=ExtResource( 3 )]

[node name="MissileTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Score" parent="." instance=ExtResource( 5 )]
position = Vector2( 6.14604, 7.81253 )
scale = Vector2( 1.5, 1.5 )

[node name="EndScene" parent="." instance=ExtResource( 6 )]
position = Vector2( 102.907, 66.4245 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 10

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="game_over" from="." to="EndScene" method="_on_GameWindow_game_over"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
